--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
   </header>
   <div class=" ms-0 me-0" style="height: 120vh;
   width: 100%;
-  background-image: url(img/endfield8.jpg);
+  background-image: url(img/endfield8.webp);
   background-size: cover;
   background-position: center;">
-<!-- <img class="bg-img" style="width: 100%;" src="archchan.png" alt="..."> -->
+<!-- <img class="bg-img" style="width: 100%;" src="archchan.webp" alt="..."> -->
 <div class="inner-container ms-5" style="width: 50%; height: 30%; padding-top: 400px;">
   <div style="height: 20vh;
   width: 65%;
-  background-image: url(img/terminal1.png);
+  background-image: url(img/terminal1.webp);
   background-size: cover;
   border: 2px solid #1793d1;">
 	<h4 class="text-white ps-3 fw-bold" id="retro1">Hello, my name is</h4>
@@ -113,14 +113,14 @@
             display: flex;
             justify-content: center;
             background-repeat: repeat-x;
-            background-image: url('img/warning.png'); /* Make sure the URL is enclosed in single or double quotes */
+            background-image: url('img/warning.webp'); /* Make sure the URL is enclosed in single or double quotes */
             background-size: auto; /* Use 'auto' to maintain the image's original size */
             background-position: center; border: 2px solid #333;"></div> -->
 <div class="container mt-5" style="height: 150vh;
 display: flex;
 justify-content: center;
 
-background-image: url(img/monitor.png);
+background-image: url(img/monitor.webp);
 background-size: cover;
 background-position: center;">
 
@@ -153,13 +153,13 @@ background-position: center;">
             display: flex;
             justify-content: center;
             background-repeat: repeat-x;
-            background-image: url('img/warning.png'); /* Make sure the URL is enclosed in single or double quotes */
+            background-image: url('img/warning.webp'); /* Make sure the URL is enclosed in single or double quotes */
             background-size: auto; /* Use 'auto' to maintain the image's original size */
             background-position: center; border: 2px solid #333;"></div>
 <div class="container mt-5 mb-5 bg-black" id="about">
   <div class="row">
     <div class="col bg-black justify-content-center">
-      <img src="../ruilin.png" alt="" style="width: 100%;"/>
+      <img src="../ruilin.webp" alt="" style="width: 100%;"/>
         </div>
     <div class="col">
   <h3 class="text-success fw-bold ms-4 " id="retro" >About me</h3>
@@ -177,7 +177,7 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
             display: flex;
             justify-content: center;
             background-repeat: repeat-x;
-            background-image: url('img/warning.png'); /* Make sure the URL is enclosed in single or double quotes */
+            background-image: url('img/warning.webp'); /* Make sure the URL is enclosed in single or double quotes */
             background-size: auto; /* Use 'auto' to maintain the image's original size */
             background-position: center; border: 2px solid #333;"></div>
 <div class="ms-5 me-5 mt-5 mb-5 bg-black align-items-center" id="skills" >
@@ -186,7 +186,7 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-        <img src="../img/python.png" alt="..." style="width: 50%;">
+        <img src="../img/python.webp" alt="..." style="width: 50%;">
         </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">Python</h5>
@@ -209,7 +209,7 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/c.png" alt="..." style="width: 50%;">
+          <img src="../img/c.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">C</h5>
@@ -234,7 +234,7 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/java.png" alt="..." style="width: 50%;">
+          <img src="../img/java.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">Java</h5>
@@ -258,7 +258,7 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/Cs.png" alt="..." style="width: 50%;">
+          <img src="../img/Cs.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">C#</h5>
@@ -282,7 +282,7 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="img/html.jpg" alt="..." style="width: 50%;">
+          <img src="img/html.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark mt-3" id="retro">HTML/CSS/Bootstrap/js</h5>
@@ -306,7 +306,7 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/django.png" alt="..." style="width: 50%;">
+          <img src="../img/django.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">django</h5>
@@ -330,7 +330,7 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/react.png" alt="..." style="width: 50%;">
+          <img src="../img/react.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">react</h5>
@@ -354,7 +354,7 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/R.png" alt="..." style="width: 50%;">
+          <img src="../img/R.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">R</h5>
@@ -378,7 +378,7 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/SAS.png" alt="..." style="width: 50%;">
+          <img src="../img/SAS.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">SAS</h5>
@@ -401,7 +401,7 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/tux.png" alt="..." style="width: 50%;">
+          <img src="../img/tux.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark mt-4" id="retro">linux</h5>
@@ -425,7 +425,7 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/unity.png" alt="..." style="width: 50%;">
+          <img src="../img/unity.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">unity</h5>
@@ -449,7 +449,7 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/latex.png" alt="..." style="width: 50%;">
+          <img src="../img/latex.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">latex</h5>
@@ -472,7 +472,7 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/libre.png" alt="..." style="width: 50%;">
+          <img src="../img/libre.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">LibreOffice</h5>
@@ -495,7 +495,7 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/xournal.png" alt="..." style="width: 50%;">
+          <img src="../img/xournal.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">xournal++</h5>
@@ -518,7 +518,7 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/ps.png" alt="..." style="width: 50%;">
+          <img src="../img/ps.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">Photoshop/GIMP</h5>
@@ -541,7 +541,7 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/jlpt.png" alt="..." style="width: 50%;">
+          <img src="../img/jlpt.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">Japanese</h5>
@@ -622,7 +622,7 @@ have to do.</p><a href="https://blog.ruilinp.com/about/" class="btn btn-primary 
         <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
 
           <div class="rounded-circle bg-black shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto" style="width: 150px; height: 150px;">
-            <img src="../ruilin.png" height="100" alt=""
+            <img src="../ruilin.webp" height="100" alt=""
                  loading="lazy" />
           </div>
 
