--- a/indexc.html
+++ b/indexc.html
@@ -90,14 +90,14 @@
   </header>
   <div class=" ms-0 me-0" style="height: 120vh;
   width: 100%;
-  background-image: url(img/endfield8.jpg);
+  background-image: url(img/endfield8.webp);
   background-size: cover;
   background-position: center;">
-<!-- <img class="bg-img" style="width: 100%;" src="archchan.png" alt="..."> -->
+<!-- <img class="bg-img" style="width: 100%;" src="archchan.webp" alt="..."> -->
 <div class="inner-container ms-5" style="width: 50%; height: 30%; padding-top: 400px;">
   <div style="height: 20vh;
   width: 65%;
-  background-image: url(img/terminal1.png);
+  background-image: url(img/terminal1.webp);
   background-size: cover;
   border: 2px solid #1793d1;">
 	<h4 class="text-white ps-3 fw-bold" id="retroc1">您好,在下 </h4>
@@ -113,14 +113,14 @@
   display: flex;
   justify-content: center;
   background-repeat: repeat-x;
-  background-image: url('img/warning.png'); /* Make sure the URL is enclosed in single or double quotes */
+  background-image: url('img/warning.webp'); /* Make sure the URL is enclosed in single or double quotes */
   background-size: auto; /* Use 'auto' to maintain the image's original size */
   background-position: center; border: 2px solid #333;"></div> -->
 <div class="container mt-5" style="height: 150vh;
 display: flex;
 justify-content: center;
 
-background-image: url(img/monitor.png);
+background-image: url(img/monitor.webp);
 background-size: cover;
 background-position: center;">>
   <pre><output id="arch" style="margin-top: 40%;">[ruilin@archlinux blog]$ neofetch 
@@ -152,13 +152,13 @@ width: 100%; /* Ensure the width is sufficient for the repetition */
 display: flex;
 justify-content: center;
 background-repeat: repeat-x;
-background-image: url('img/warning.png'); /* Make sure the URL is enclosed in single or double quotes */
+background-image: url('img/warning.webp'); /* Make sure the URL is enclosed in single or double quotes */
 background-size: auto; /* Use 'auto' to maintain the image's original size */
 background-position: center; border: 2px solid #333;"></div>
 <div class="container mt-5 mb-5 bg-black" id="about">
   <div class="row">
     <div class="col bg-black justify-content-center">
-      <img src="../ruilin.png" alt="" style="width: 100%;"/>
+      <img src="../ruilin.webp" alt="" style="width: 100%;"/>
         </div>
     <div class="col">
   <h3 class="text-success fw-bold ms-4 " id="retroc" >關於我</h3>
@@ -173,7 +173,7 @@ width: 100%; /* Ensure the width is sufficient for the repetition */
 display: flex;
 justify-content: center;
 background-repeat: repeat-x;
-background-image: url('img/warning.png'); /* Make sure the URL is enclosed in single or double quotes */
+background-image: url('img/warning.webp'); /* Make sure the URL is enclosed in single or double quotes */
 background-size: auto; /* Use 'auto' to maintain the image's original size */
 background-position: center; border: 2px solid #333;"></div>
 <div class="ms-5 me-5 mt-5 mb-5 bg-black align-items-center" id="skills">
@@ -182,7 +182,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-        <img src="../img/python.png" alt="..." style="width: 50%;">
+        <img src="../img/python.webp" alt="..." style="width: 50%;">
         </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">Python</h5>
@@ -205,7 +205,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/c.png" alt="..." style="width: 50%;">
+          <img src="../img/c.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">C</h5>
@@ -230,7 +230,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/java.png" alt="..." style="width: 50%;">
+          <img src="../img/java.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">Java</h5>
@@ -254,7 +254,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/Cs.png" alt="..." style="width: 50%;">
+          <img src="../img/Cs.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">C#</h5>
@@ -278,7 +278,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="img/html.jpg" alt="..." style="width: 50%;">
+          <img src="img/html.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark mt-3" id="retro">HTML/CSS/Bootstrap/js</h5>
@@ -302,7 +302,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/django.png" alt="..." style="width: 50%;">
+          <img src="../img/django.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">django</h5>
@@ -326,7 +326,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/react.png" alt="..." style="width: 50%;">
+          <img src="../img/react.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">react</h5>
@@ -350,7 +350,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/R.png" alt="..." style="width: 50%;">
+          <img src="../img/R.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">R</h5>
@@ -374,7 +374,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/SAS.png" alt="..." style="width: 50%;">
+          <img src="../img/SAS.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">SAS</h5>
@@ -397,7 +397,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/tux.png" alt="..." style="width: 50%;">
+          <img src="../img/tux.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark mt-4" id="retro">linux</h5>
@@ -421,7 +421,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/unity.png" alt="..." style="width: 50%;">
+          <img src="../img/unity.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">unity</h5>
@@ -445,7 +445,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/latex.png" alt="..." style="width: 50%;">
+          <img src="../img/latex.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">latex</h5>
@@ -468,7 +468,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/libre.png" alt="..." style="width: 50%;">
+          <img src="../img/libre.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">LibreOffice</h5>
@@ -491,7 +491,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/xournal.png" alt="..." style="width: 50%;">
+          <img src="../img/xournal.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">xournal++</h5>
@@ -514,7 +514,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/ps.png" alt="..." style="width: 50%;">
+          <img src="../img/ps.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">Photoshop/GIMP</h5>
@@ -537,7 +537,7 @@ background-position: center; border: 2px solid #333;"></div>
     <div class="col">
       <div class="card h-100 bg-white">
         <div class="center-image-container mt-4">
-          <img src="../img/jlpt.png" alt="..." style="width: 50%;">
+          <img src="../img/jlpt.webp" alt="..." style="width: 50%;">
           </div>
         <div class="card-body">
           <h5 class="card-title fw-bold text-center text-dark" id="retro">Japanese</h5>
@@ -618,7 +618,7 @@ background-position: center; border: 2px solid #333;"></div>
         <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
 
           <div class="rounded-circle bg-black shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto" style="width: 150px; height: 150px;">
-            <img src="../ruilin.png" height="100" alt=""
+            <img src="../ruilin.webp" height="100" alt=""
                  loading="lazy" />
           </div>
 
