--- a/indexj1.html
+++ b/indexj1.html
@@ -10,7 +10,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     
     <title>Ruilin's portofolio</title>
-    <link rel="icon" type="image/x-icon" href="konoha.ico">
+    <link rel="icon" type="image/x-icon" href="img/konoha.ico">
 </head>
 <body class = "bg-black">
   <!--navbar-->
