--- a/indexj1.html
+++ b/indexj1.html
@@ -104,7 +104,7 @@
   border: 2px solid #1793d1;">
 	<h4 class="text-white ps-3 fw-bold" id="retroj1">こんにちは, </h4>
   
-	<h3 class="text-primary fw-bold cursor" id="retroj2">ルイリン-プォン<span class="text-white">と呼んで</span><i></i></h2>
+	<h3 class="text-primary fw-bold cursor" id="retroj2">ルイリン-プォン<span class="text-white">と呼んで~</span><i></i></h2>
 	
   </div>
 	</div>
@@ -168,7 +168,7 @@ background-position: center; border: 2px solid #333;"></div>
 <div class="container mt-5 mb-5 bg-black" id="about">
   <div class="row">
     <div class="col bg-black justify-content-center">
-      <img src="../ruilin.webp" alt="" style="width: 100%;"/>
+      <img src="../pc98.webp" alt="" style="width: 100%;"/>
         </div>
     <div class="col">
   <h3 class="text-success fw-bold ms-4 " id="retroj" >俺について</h3>
