--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
               <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="indexc.html" data-option="Any" id="retroj">CN/中文</a></li>
                   <li><a class="dropdown-item" href="indexj1.html" data-option="Abyssinian" id="retroj">JP/日本語</a></li>
+                  <li><a class="dropdown-item" href="indexk.html" data-option="Abyssinian" id="retroj">KR/한국어</a></li>
                   
                   <li>
                       <hr class="dropdown-divider">
