--- a/indexj1.html
+++ b/indexj1.html
@@ -71,12 +71,13 @@
               </button>
               <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="indexc.html" data-option="Any"　id="retroj" >CN/中文</a></li>
+                  <li><a class="dropdown-item" href="indexk.html" data-option="Abyssinian" id="retroj">KR/한국어</a></li>
                   <li><a class="dropdown-item" href="index.html" data-option="Abyssinian"　id="retroj" >EN/英語</a></li>
                   
                   <li>
                       <hr class="dropdown-divider">
                   </li>
-                  
+                  <li><a class="dropdown-item" href="indexj1.html"  id="retroj" >JP/日本語</a></li>
               </ul>
           </div>
           <a class="btn btn-primary text-white fw-bold btn-sm ms-1 me-1" href="#" role="button">Ruilinルイリン彭瑞麟</a>
