updated top bar

--- a/indexj1.html
+++ b/indexj1.html
@@ -56,6 +56,9 @@
           <li class="nav-item">
             <a href="https://blog.ruilinp.com/" class="nav-link text-white fw-bold ms-4" id="retroj">ブログ</a>
           </li>
+          <li class="nav-item">
+            <a href="http://invidious.ruilinp.com/" class="nav-link text-white fw-bold ms-4" id="retro">インビデオズ</a>
+          </li>
           </ul>
           
           <a class="btn btn-primary text-white fw-bold btn-sm ms-3 me-1" href="#" role="button">69% 🎧 27% 🎙</a>
