--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
           <li class="nav-item">
             <a href="https://blog.ruilinp.com/" class="nav-link text-white fw-bold ms-4" id="retro">Blog</a>
           </li>
+          <li class="nav-item">
+            <a href="http://invidious.ruilinp.com/" class="nav-link text-white fw-bold ms-4" id="retro">Invidious</a>
+          </li>
           </ul>
           
           <a class="btn btn-primary text-white fw-bold btn-sm ms-3 me-1" href="#" role="button">69% 🎧 27% 🎙</a>
