--- a/indexj1.html
+++ b/indexj1.html
@@ -57,7 +57,7 @@
             <a href="https://blog.ruilinp.com/" class="nav-link text-white fw-bold ms-4" id="retroj">ブログ</a>
           </li>
           <li class="nav-item">
-            <a href="http://invidious.ruilinp.com/" class="nav-link text-white fw-bold ms-4" id="retro">インビデオズ</a>
+            <a href="http://invidious.ruilinp.com/" class="nav-link text-white fw-bold ms-4" id="retroj">インビデオズ</a>
           </li>
           </ul>
           
